Fixed alignment of userhandle

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -107,3 +107,9 @@
   color: darkorange;
   cursor: pointer; 
 }
+
+h2.userhandle {
+  display: flex;
+  align-items: end;
+  justify-content: flex-end;
+}
